1,2,3,6 are ok, 2,3,6 are now specialized

--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -10,7 +10,7 @@
     <ul>
         {% for entry in entries %}
             <li>
-                <a href="{% url 'encyclopedia:entry_name' entry %}"> {{ entry }}</a>
+                <a href="{% url 'encyclopedia:entry' entry %}"> {{ entry }}</a>
             </li>
         {% endfor %}
     </ul>
