--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -19,7 +19,7 @@
                     <a href="{% url 'encyclopedia:index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{% url 'encyclopedia:new' %}"> Create New Page </a>
                 </div>
                 <div>
                     <a href="{% url 'encyclopedia:random' %}"> Random Page </a>     
