Adde search results and minor debugging

--- a/encyclopedia/templates/encyclopedia/results.html
+++ b/encyclopedia/templates/encyclopedia/results.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <h2>All Pages</h2>
+    <h3>Search results</h3>
 
     <ul>
         {% for entry in entries %}
