--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -1,9 +1,9 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-
-    <h3>Active Listings</h3>
-
+    
+    <h3>Create Listings</h3>
+    
     TODO
     
 {% endblock %}
