--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -2,13 +2,13 @@
 
 {% block body %}
 
-    <h2>Login</h2>
+    <h3>Login</h3>
 
     {% if message %}
         <div>{{ message }}</div>
     {% endif %}
 
-    <form action="{% url 'login' %}" method="post">
+    <form action="{% url 'auctions:login' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
             <input autofocus class="form-control" type="text" name="username" placeholder="Username">
@@ -19,6 +19,6 @@
         <input class="btn btn-primary" type="submit" value="Login">
     </form>
 
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    Don't have an account? <a href="{% url 'auctions:register' %}">Register here.</a>
 
 {% endblock %}
