--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -2,8 +2,12 @@
 
 {% block body %}
     
-    <h3>Create Listings</h3>
+    <h3>Create listing</h3>
     
-    TODO
+    <form action="{% url 'auctions:create' %}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="create">
+    </form>
     
 {% endblock %}
