--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -6,18 +6,20 @@
 
     
         {% for item in items %}
-        <div class="border rounded mb-0">
-                {% if item.image != ""%}
-                    <img src={{item.image}} alt="No image available" width="200">
-                {%endif%}
-
-                <p>
-                    <a href="{% url 'auctions:listing' item.id %}">{{ item.title }}</a>
-                </p>
-                <p>
-                    Price {{ item.starting_bid }} $
-                </p>
-                
+        <div class="d-flex border rounded mx-auto" style="width:50%; ">
+            <div class="p-1 mr-auto my-auto">
+                {% if item.image != "" %}
+                    <img src={{item.image}} alt="No image available" width="100">
+                {% else %}
+                    <img src="https://cdn0.iconfinder.com/data/icons/game-2-2/50/113-512.png" alt="No image available" width="100" height="100">
+                {% endif %}
+            </div>
+            <div class="p-1 ml-auto my-auto">
+                <a href="{% url 'auctions:listing' item.id %}">{{ item.title }}</a>
+            </div>
+            <div class="p-1 mx-auto my-auto">
+                Price {{ item.starting_bid }} $
+            </div>
         </div>
         <p></p>
         {% endfor %}
