--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -5,14 +5,40 @@
 {% endblock %}
 
 {% block body %}
-<ul>
-    <li> Title: {{title}} </li>
-    <li> Description: {{description}} </li>
-    <li> Bid: {{starting_bid}} $ </li>
-    {% if image != ""%}
-        <p> <img src={{image}} alt="No image available" width="200"> </p>
-    {%endif%}
-    
-    <li> Categury: {{categury}} </li>
-</ul>
+                {% if image != "" %}
+                    <img src={{image}} alt="No image available" width="100">
+                {% else %}
+                    <img src="https://cdn0.iconfinder.com/data/icons/game-2-2/50/113-512.png" alt="No image available" width="100" height="100">
+                {% endif %}
+            <p></p>
+            <table class="table table-striped mx-auto" style="width:50%">
+                <thead class="thead-dark"> 
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Description</th>
+                        <th scope="col"> Bid ($)</th>
+                        <th scope="col">Categury</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        <tr>
+                            <th scope="row">{{id}}</th>
+                            <td>{{title}}</td>
+                            <td> {{description}} </td>
+                            <td>{{starting_bid}}</td>
+                            <td>{{categury}} </td>
+                        </tr>
+                </tbody>
+            </table>
+
+
+
+
+
+
+
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+</button>
 {% endblock %}
