--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -5,12 +5,14 @@
 {% endblock %}
 
 {% block body %}
-                {% if image != "" %}
-                    <img src={{image}} alt="No image available" width="100">
-                {% else %}
-                    <img src="https://cdn0.iconfinder.com/data/icons/game-2-2/50/113-512.png" alt="No image available" width="100" height="100">
-                {% endif %}
+            
+            {% if image != "" %}
+                <img src={{image}} alt="No image available" width="100">
+            {% else %}
+                <img src="https://cdn0.iconfinder.com/data/icons/game-2-2/50/113-512.png" alt="No image available" width="100" height="100">
+            {% endif %}
             <p></p>
+            
             <table class="table table-striped mx-auto" style="width:50%">
                 <thead class="thead-dark"> 
                     <tr>
@@ -19,6 +21,7 @@
                         <th scope="col">Description</th>
                         <th scope="col"> Bid ($)</th>
                         <th scope="col">Categury</th>
+                        <th scope="col">Watch list</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -28,6 +31,16 @@
                             <td> {{description}} </td>
                             <td>{{starting_bid}}</td>
                             <td>{{categury}} </td>
+                            <td>
+                                {% if user.is_authenticated %}
+                                    <form action="{% url 'auctions:listing' id %}" method="post">
+                                        {% csrf_token %}
+                                        <input class="btn btn-{{color}} rounded-pill" type="submit" value={{value}}>
+                                    </form>
+                                {% else %}
+                                    Not signed in!
+                                {% endif%}
+                            </td>
                         </tr>
                 </tbody>
             </table>
