--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -8,7 +8,7 @@
                 {% csrf_token %}
                 <div class="form-group"> {{ form.title }} </div>
                 <div class="form-group"> {{ form.description }} </div>
-                <div class="form-group"> {{ form.starting_bid }} </div>
+                <div class="form-group"> {{ form.current_bid }} </div>
                 <div class="form-group">{{ form.image }} </div>
                 <div class="form-group"> {{ form.categury }} </div>
                 <input type="submit" value="create">
