--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -6,10 +6,10 @@
 
 {% block body %}
             
-            {% if image != "" %}
-                <img src={{image}} alt="No image available" width="100">
-            {% else %}
+            {% if image == "" or image == None %}
                 <img src="https://cdn0.iconfinder.com/data/icons/game-2-2/50/113-512.png" alt="No image available" width="100" height="100">
+            {% else %}
+                <img src={{image}} alt="No image available" width="100">
             {% endif %}
             <p></p>
             
@@ -29,13 +29,13 @@
                             <th scope="row">{{id}}</th>
                             <td>{{title}}</td>
                             <td> {{description}} </td>
-                            <td>{{starting_bid}}</td>
+                            <td>{{current_bid}}</td>
                             <td>{{categury}} </td>
                             <td>
                                 {% if user.is_authenticated %}
                                     <form action="{% url 'auctions:listing' id %}" method="post">
                                         {% csrf_token %}
-                                        <input class="btn btn-{{color}} rounded-pill" type="submit" value={{value}}>
+                                        <input name = "watch" class="btn btn-{{color}} rounded-pill" type="submit" value={{value}}>
                                     </form>
                                 {% else %}
                                     Not signed in!
@@ -45,13 +45,13 @@
                 </tbody>
             </table>
 
+        {% if user.is_authenticated %}
+            <form action="{% url 'auctions:listing' id %}" method="post">
+                {% csrf_token %}
+                <div class="form-group"> {{form.bid }} </div>
+                <input name = "bid" class="btn btn-primary" type="submit" value="Place bid">
+            </form>
 
+        {% endif %}
 
-
-
-
-
-<button type="button" class="btn btn-default" aria-label="Left Align">
-  <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
-</button>
 {% endblock %}
