--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -11,7 +11,7 @@
                 <div class="form-group"> {{ form.current_bid }} </div>
                 <div class="form-group">{{ form.image }} </div>
                 <div class="form-group"> {{ form.categury }} </div>
-                <input type="submit" value="create">
+                <input type="submit" value="create" class="btn btn-dark">
             </div>
         </form>
     </div>  
