--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -13,15 +13,15 @@
             {% endif %}
             <p></p>
             
-            <table class="table table-striped mx-auto" style="width:50%">
+            <table class="table table-striped mx-auto" style="width:70%">
                 <thead class="thead-dark"> 
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Title</th>
                         <th scope="col">Description</th>
-                        <th scope="col"> Bid ($)</th>
+                        <th scope="col"> Bid($)</th>
                         <th scope="col">Categury</th>
-                        <th scope="col">Watch list</th>
+                        <th scope="col">Watch</th>
                     </tr>
                 </thead>
                 <tbody>
