--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -6,52 +6,67 @@
 
 {% block body %}
             
+            {% if bidder == user and status == "Closed" %}
+            <h4 class="text-success font-weight-bold">Congratulations! you won the auction!</h4>
+            {% endif%}
+
+
+            <h4 class="font-weight-bold">{{title}}</h4>
+
+
+            {% if user.is_authenticated %}
+                <form action="{% url 'auctions:listing' id %}" method="post">
+                    {% csrf_token %}
+                    <input name = "watch" class="btn btn-{{color}} rounded-pill" style="font-size:80%;" type="submit" value="Watchlist">
+                </form>
+            <p></p>
+            {% endif%}
+
             {% if image == "" or image == None %}
                 <img src="https://cdn0.iconfinder.com/data/icons/game-2-2/50/113-512.png" alt="No image available" width="100" height="100">
             {% else %}
                 <img src={{image}} alt="No image available" width="100">
             {% endif %}
             <p></p>
+
+
             
-            <table class="table table-striped mx-auto" style="width:70%">
+            <table class="table table-striped mx-auto" style="width:60%">
                 <thead class="thead-dark"> 
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Title</th>
                         <th scope="col">Description</th>
                         <th scope="col"> Bid($)</th>
                         <th scope="col">Categury</th>
-                        <th scope="col">Watch</th>
+                        <th scope="col">Status</th>
                     </tr>
                 </thead>
                 <tbody>
                         <tr>
-                            <th scope="row">{{id}}</th>
-                            <td>{{title}}</td>
-                            <td> {{description}} </td>
-                            <td>{{current_bid}}</td>
-                            <td>{{categury}} </td>
-                            <td>
-                                {% if user.is_authenticated %}
-                                    <form action="{% url 'auctions:listing' id %}" method="post">
-                                        {% csrf_token %}
-                                        <input name = "watch" class="btn btn-{{color}} rounded-pill" type="submit" value={{value}}>
-                                    </form>
-                                {% else %}
-                                    Not signed in!
-                                {% endif%}
-                            </td>
+                            <th class="text-center" scope="row">{{id}}</th>
+                            <td class="text-center"> {{description}} </td>
+                            <td class="text-center">{{current_bid}}</td>
+                            <td class="text-center">{{categury}} </td>
+                            <td class="text-center primary">{{status}} </td>
                         </tr>
                 </tbody>
             </table>
 
-        {% if user.is_authenticated %}
+        {% if user.is_authenticated and status == "Active" %}
             <form action="{% url 'auctions:listing' id %}" method="post">
                 {% csrf_token %}
                 <div class="form-group"> {{form.bid }} </div>
                 <input name = "bid" class="btn btn-primary" type="submit" value="Place bid">
             </form>
+            <p></p>
+        {% endif %}
 
+            {% if creator.id == user.id and status == "Active" %}
+            <form action="{% url 'auctions:listing' id %}" method="post">
+                {% csrf_token %}
+                <input name = "close" class="btn btn-danger" type="submit" value="Close auction">
+            </form>
+            <p></p>
         {% endif %}
 
 {% endblock %}
