--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -6,25 +6,41 @@
 
     
         {% for item in items %}
-        <div class="d-flex border rounded mx-auto" style="width:70%; ">
-            <div class="p-1 mr-auto my-auto">
-                {% if item.image == "" or item.image == None %}
-                    <img src="https://cdn0.iconfinder.com/data/icons/game-2-2/50/113-512.png" alt="No image available" width="100" height="100">
-                {% else %}
-                    <img src={{item.image}} alt="No image available" width="100">
-                {% endif %}
-            </div>
-            <div class="p-1 ml-auto my-auto">
-                <a href="{% url 'auctions:listing' item.id %}">{{ item.title }}</a>
-            </div>
-            <div class="p-1 mx-auto my-auto">
-                Price {{ item.current_bid }} $
-            </div>
-            <div class="p-1 mx-auto my-auto text-secondary">
-                <small>
-                Created 
-                <p> {{ item.creation_time }} <p>
-                </small>
+        <div class="container border rounded" style="width:80%;">
+            <div class="row">
+                <div class="col my-auto ml-0 p-0">
+                    {% if item.image == "" or item.image == None %}
+                        <img src="https://cdn0.iconfinder.com/data/icons/game-2-2/50/113-512.png" alt="No image available" width="100" height="100">
+                    {% else %}
+                        <img src={{item.image}} alt="No image available" width="100">
+                    {% endif %}
+                </div>
+
+                <div class="col my-auto">
+                    <a href="{% url 'auctions:listing' item.id %}">{{ item.title }}</a>
+                </div>
+
+                <div class="col my-auto">
+                    Price: ${{ item.current_bid }} 
+                </div>
+                
+                <div class="col my-auto text-secondary">
+                    <small>
+                    Created 
+                    <p> {{ item.creation_time }} <p>
+                    </small>
+                </div>
+
+                <div class="col my-auto mr-0 text-secondary">
+                        <p>  
+                            {% if item.status %}
+                                <span class="text-success"> Active </span>
+                            {% else %}
+                                <span class="text-danger"> Closed </span>
+                            {% endif %}
+                        <p>
+                </div>
+
             </div>
         </div>
         <p></p>
