--- a/auctions/templates/auctions/categuries.html
+++ b/auctions/templates/auctions/categuries.html
@@ -4,6 +4,17 @@
 
     <h3>Categuries</h3>
 
-    TODO
+    {% for cat in categuries %}
+    <div class= "conrainer mx-auto border rounded" style="width:30%;%">
+        <div class ="row">
+            <ul>
+                <li> 
+                    <a href="{% url 'auctions:categury' cat %}">{{ cat }}</a>
+                </li>
+            </ul>
+        </div>    
+    </div>
+    <p></p>
+    {% endfor %}
 
 {% endblock %}
