Archive, Unarchive and Reply working

--- a/Projects/p3/mail/templates/mail/inbox.html
+++ b/Projects/p3/mail/templates/mail/inbox.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block body %}
-    <h2>{{ request.user.email }}</h2>
+
+    <h2 class="mt-4">{{ request.user.email }}</h2>
 
     <button class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
     <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
@@ -19,7 +20,7 @@
 
     <div id="compose-view">
         <h3>New Email</h3>
-        <form id="compose-form">
+        <form id="compose-form" onsubmit="return false;">
             <div class="form-group">
                 From: <input disabled class="form-control" value="{{ request.user.email }}">
             </div>
@@ -30,7 +31,7 @@
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary"/>
+            <input type="submit" class="btn btn-primary m-1" value="Send"/>
         </form>
     </div>
 {% endblock %}
