--- a/Projects/p3/mail/templates/mail/register.html
+++ b/Projects/p3/mail/templates/mail/register.html
@@ -2,26 +2,28 @@
 
 {% block body %}
 
-    <h2>Register</h2>
+    <p></p>
+    <div class="mx-auto mt-5 w-25">
+        <h2 class="m-2">Register</h2>
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+        {% if message %}
+            <div>{{ message }}</div>
+        {% endif %}
 
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Register">
-    </form>
+        <form action="{% url 'register' %}" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <input class="form-control" type="email" name="email" placeholder="Email Address">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+            </div>
+            <input class="btn btn-primary m-2" type="submit" value="Register">
+        </form>
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
-
+        Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    </div>
 {% endblock %}
