--- a/Projects/p4/network/templates/network/register.html
+++ b/Projects/p4/network/templates/network/register.html
@@ -2,13 +2,15 @@
 
 {% block body %}
 
+<div class='w-25 mx-auto'>
+
     <h2>Register</h2>
 
     {% if message %}
         <div>{{ message }}</div>
     {% endif %}
 
-    <form action="{% url 'register' %}" method="post">
+    <form action="{% url 'network:register' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
             <input class="form-control" autofocus type="text" name="username" placeholder="Username">
@@ -25,6 +27,7 @@
         <input class="btn btn-primary" type="submit" value="Register">
     </form>
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    Already have an account? <a href="{% url 'network:login' %}">Log In here.</a>
 
+</div>
 {% endblock %}
