--- a/Projects/p4/network/templates/network/index.html
+++ b/Projects/p4/network/templates/network/index.html
@@ -37,11 +37,22 @@
                     posted {{post.post_time}} 
                 </small>
             </p>
-            <p class="d-flex border rounded mx-auto bg-light text-sm-left-justify p-1 my-0" style="width:90%;">{{post.post}} </p>
-            <img class="ml-4 mb-2 mt-1" src="{% static 'network/like.png' %}" alt="No image available" width="20" height="20">
-            {{post.likes}} 
+            <p id="post{{post.id}}" class="d-flex border rounded mx-auto bg-light text-sm-left-justify p-1 my-0" style="width:90%;">{{post.post}} </p>
+            
+            <div class="row mx-auto my-0 p-1" style="width:90%;">
+                <img class="ml-1 mb-2 mt-1" src="{% static 'network/like.png' %}" alt="No image available" width="20" height="20">
+                {{post.likes}}
+                {% if user.id == post.poster.id %} 
+                    <button id="edit{{post.id}}" onclick="edit('{{post.id}}')" class="btn btn-primary ml-auto">Edit</button>
+                {% endif %}
+            </div>
+            
         {% endfor %}
     </div>
 
 </div>    
+{% endblock %}
+
+{% block script %}
+    <script src="{% static 'network/util.js' %}"></script>
 {% endblock %}
