--- a/Projects/p4/network/templates/network/index.html
+++ b/Projects/p4/network/templates/network/index.html
@@ -40,8 +40,15 @@
             <p id="post{{post.id}}" class="d-flex border rounded mx-auto bg-light text-sm-left-justify p-1 my-0" style="width:90%;">{{post.post}} </p>
             
             <div class="row mx-auto my-0 p-1" style="width:90%;">
-                <img class="ml-1 mb-2 mt-1" src="{% static 'network/like.png' %}" alt="No image available" width="20" height="20">
-                {{post.likes}}
+                
+                {% if user.id in post.serialize.likers %}
+                    <img id="like{{post.id}}" onclick="like('{{post.id}},{{user.id}}')" class="ml-1 mb-2 mt-1" src="{% static 'network/like1.png' %}" alt="No image available" width="20" height="20">
+                {% else %}
+                    <img id="like{{post.id}}" onclick="like('{{post.id}},{{user.id}}')" class="ml-1 mb-2 mt-1" src="{% static 'network/like.png' %}" alt="No image available" width="20" height="20">
+                {% endif %}
+                
+                <p id="likes{{post.id}}" class="mb-1 ml-1 text-success">{{post.likes}}</p>
+                
                 {% if user.id == post.poster.id %} 
                     <button id="edit{{post.id}}" onclick="edit('{{post.id}}')" class="btn btn-primary ml-auto">Edit</button>
                 {% endif %}
