--- a/Projects/p4/network/templates/network/index.html
+++ b/Projects/p4/network/templates/network/index.html
@@ -50,7 +50,7 @@
                 <p id="likes{{post.id}}" class="mb-1 ml-1 text-success">{{post.likes}}</p>
                 
                 {% if user.id == post.poster.id %} 
-                    <button id="edit{{post.id}}" onclick="edit('{{post.id}}')" class="btn btn-primary ml-auto">Edit</button>
+                    <button id="edit{{post.id}}" onclick="edit('{{post.id}}')" class="btn btn-outline-primary ml-auto">Edit</button>
                 {% endif %}
             </div>
             
